<resources>
    <string name="app_name">TfMobile MNIST</string>
    <string name="prediction">Prediction</string>
    <string name="probability">Probability</string>
    <string name="timecost">Timecost</string>
    <string name="timecost_value">%1$d ms</string>
    <string name="empty">--</string>
    <string name="detect">Detect</string>
    <string name="clear">Clear</string>
    <string name="please_write_a_digit">Please write a digit in the box above.</string>
    <string name="failed_to_create_classifier">Failed to create classifier.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">"Atpažink" app</string>
    <string name="nav_header_subtitle">Creator: Paulius Grigaliūnas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
</resources>
