<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DrawFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="195dp">

        <TextView
            style="@style/ResultText"
            android:layout_height="0dp"
            android:text="@string/prediction" />

        <TextView
            android:id="@+id/tv_prediction"
            style="@style/ResultText"
            android:layout_width="match_parent"
            android:text="@string/empty"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="1" />

        <TableRow>

            <TextView
                style="@style/ResultText"
                android:text="@string/probability" />

            <TextView
                style="@style/ResultText"
                android:text="@string/timecost" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_probability"
                style="@style/ResultText"
                android:text="@string/empty"
                android:textColor="@android:color/black"
                tools:text="0.9" />


            <TextView
                android:id="@+id/tv_timecost"
                style="@style/ResultText"
                android:text="@string/empty"
                android:textColor="@android:color/black"
                tools:text="10ms" />

        </TableRow>

    </TableLayout>

    <com.nex3z.fingerpaintview.FingerPaintView
        android:id="@+id/fpv_paint2"
        android:layout_width="331dp"
        android:layout_height="249dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:foreground="@drawable/shape_rect_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fpv_paint2">

        <Button
            android:id="@+id/btn_detect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detect" />

        <Button
            android:id="@+id/btn_clear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>